--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -5,9 +5,12 @@
 
 .container {
     width: 80%;
-    min-height: 100vh;
     background: rgba(255, 255, 255, 0.6);
     padding: 20px;
+}
+
+.bi {
+    vertical-align: 0.125em;
 }
 
 .dropdown {
@@ -33,6 +36,8 @@
 
 .dropdown:hover .dropdown-content {display: block;}
 
+.dropdown-content:hover {display:block;}
+
 .dropdown-item {
     border: black solid 1px;
     border-radius: 50px;
@@ -46,8 +51,8 @@
 }
 
 .dropdown img {
-    height: 90px;
-    width: 90px;
+    height: 80px;
+    width: 80px;
 }
 
 #logout {
@@ -77,8 +82,8 @@
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 #user-pfp {
