--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,7 +1,7 @@
 <!-- Account Page -->
 
 <div class = "screen">
-    <div class = "container">
+    <div class = "container min-vh-100">
         <div class = "row" id = "user">
             <div class = "col-10" id = "username"><h1>{{ user.username }}</h1></div>
             <div class = "col-2" id = "logout">
@@ -15,10 +15,14 @@
             </div>
             <div class = "col position-relative" id = "user-details">
                 <table class = "table-responsive-lg ms-4 position-absolute top-50 start-0 translate-middle-y">
-                    <tr><th>ID</th><td>{{ user.id }}</td></tr>
-                    <tr><th>Email</th><td>{{ user.email }}</td></tr>
-                    <tr *ngIf = "user.role == 'Super Admin'"><th>Role</th><td>{{ user.role }}</td></tr> <!-- If Super/Group/Admin/Assis-->
-                    <tr><th>Last active</th><td>{{ user.lastActive }}</td></tr>
+                    <tr><th>ID</th><td colspan = "2">{{ user.id }}</td></tr>
+                    <tr><th>Email</th><td colspan = "2">{{ user.email }}</td></tr>
+                    <tr *ngIf = "user.role == 'Super Admin' || user.role == 'Group Admin'">
+                        <th>Role</th>
+                        <td>{{ user.role }}</td>
+                        <td class = "text-end"><button type = "button" class = "btn btn-sm py-0 px-1" (click) = "openModal('admin')"><i class = "bi bi-gear-fill"></i></button></td>
+                    </tr>
+                    <tr><th>Last active</th><td colspan = "2">{{ user.lastActive }}</td></tr>
                 </table>
             </div>   
         </div>
@@ -27,14 +31,14 @@
 
         <div class = "row mx-auto" id = "groups">
             <div class = "row m-0 px-0 pb-1">
-                <div class = "col p-0"><h2>Group (5)</h2></div>
+                <div class = "col p-0"><h2>Group ({{ groups.length }})</h2></div>
                 <div *ngIf = "user.role == 'Super Admin' || user.role == 'Group Admin'" class = "col text-end p-0">
                     <button type = "button" class = "btn btn-primary py-1" (click) = "openModal('newGroup')">Create Group</button>
                 </div>
             </div>
             <div class = "container bg-transparent text-center p-0 m-auto w-100">
                 <div class = "row row-cols-3 row-cols-lg-6 p-0 m-0">
-                    <div *ngFor = "let group of groups" class = "dropdown col-lg" id = "group" (click) = "openModal('details', group.id)">
+                    <div *ngFor = "let group of groups" class = "dropdown col-lg pb-5" id = "group" (click) = "openModal('details', group.id)">
                         <h5>{{ group.name }}</h5>
                         <img src = "../../assets/img/user.png" class = "img-thumbnail rounded-circle">
                         <div class = "dropdown-content">
@@ -44,18 +48,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
-            
-            
-            
         </div>
-        
     </div>
-   
-
-
-
 </div>
 
