--- a/src/app/group-details/group-details.component.html
+++ b/src/app/group-details/group-details.component.html
@@ -115,70 +115,35 @@
                         Create User
                     </button>
                 </h2>
-                <div id = "createUser" class = "accordion-collapse collapse" data-bs-parent = "#adminWork">
+                <div id = "createUser" class = "accordion-collapse collapse show" data-bs-parent = "#adminWork">
                     <div class = "accordion-body">
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Name</label>
                             <div class = "col">
-                                <input class = "form-control" placeholder = "Username"> 
-                                <p *ngIf = "!groupValid" class = "fs-6 fw-light text-danger mb-0 pb-0">* User already exists.</p>
+                                <input class = "form-control" placeholder = "Username" [(ngModel)] = "newUser.username"> 
+                                <p *ngIf = "!newUser.validUser" class = "fs-6 fw-light text-danger mb-0 pb-0">* User already exists.</p>
                             </div>
                         </div>
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Email</label>
                             <div class = "col">
-                                <input class = "form-control" placeholder = "Email"> 
-                                <p *ngIf = "!groupValid" class = "fs-6 fw-light text-danger mb-0 pb-0">* User already exists.</p>
-                            </div>
-                        </div>
-                        <div class = "row mb-3">
-                            <label class = "col-2 col-lg-1 col-form-label me-2">Add</label>
-                            <div class = "col">
-                                <input type = "text" class = "form-control" placeholder = "Group Name" [(ngModel)] = "groupName">
-                                <p *ngIf = "!groupValid" class = "fs-6 fw-light text-danger mb-0 pb-0">* Group does not exist.</p>
+                                <input class = "form-control" placeholder = "Email" [(ngModel)] = "newUser.email"> 
                             </div>
                         </div>
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Role</label>
                             <div class = "col">
-                                <select class = "form-select">
+                                <select class = "form-select" [(ngModel)] = "newUser.role">
                                     <option value = "User">User</option>
                                     <option value = "Group Assis">Group Assis</option>
                                     <option *ngIf = "fromParent.user.role == 'Super Admin';" value = "Group Admin">Group Admin</option>
                                     <option *ngIf = "fromParent.user.role == 'Super Admin';" value = "Super Admin">Super Admin</option>
-                                </select>    
+                                </select>
+                                <p *ngIf = "newUser.empty" class = "fs-6 fw-light text-danger mb-0 pb-0">* Username and email required.</p>    
                             </div> 
                         </div>
-                        <div *ngIf = "channelList" class = "row mb-3">
-                            <label class = "col-2 col-lg-1 form-label me-2">Channel</label>
-                            <div class = "col pt-0 ps-3">
-                                <div class = "form-check">
-                                    <input class = "form-check-input" type = "checkbox" value = "">
-                                    <label class = "form-check-label">Channel 1</label>
-                                </div>
-                                <div class = "form-check">
-                                    <input class = "form-check-input" type = "checkbox" value = "">
-                                    <label class = "form-check-label">Channel 2</label>
-                                </div> 
-                                <div class = "form-check">
-                                    <input class = "form-check-input" type = "checkbox" value = "">
-                                    <label class = "form-check-label">Channel 3</label>
-                                </div>  
-                                <div class = "text-end pe-1">
-                                    <button type = "button" class = "btn btn-outline-primary">Add</button>
-                                </div>  
-                            </div>   
-                        </div>
-                        <div class = "row mb-3">
-                            <div class = "col-2 col-lg-1 form-label">Group</div>
-                            <div class = "col">
-                                <ul>
-                                    <li>Group 1</li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class = "row d-grid gap-2 col-4 mx-auto">
-                            <button type = "button" class = "btn btn-primary">Create</button>
+                            <button type = "button" class = "btn btn-primary" (click) = "createUser()">Create</button>
                         </div>
                     </div>
                 </div>
@@ -194,26 +159,25 @@
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Name</label>
                             <div class = "col">
-                                <input type = "text" class = "form-control" placeholder = "Group Name">
+                                <input type = "text" class = "form-control" placeholder = "Group Name" [(ngModel)] = "newGroup.name">
+                                <p *ngIf = "newGroup.invalidGroup" class = "fs-6 fw-light text-danger mb-0 pb-0">* Group already exists.</p>
                             </div> 
                         </div>
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Channel</label>
                             <div class = "col-8">
-                                <input type = "text" class = "form-control" placeholder = "Add a channel">
-                                <p *ngIf = "!groupValid" class = "fs-6 fw-light text-danger mb-0 pb-0">* Channel already exists.</p>
+                                <input type = "text" class = "form-control" placeholder = "Add a channel" [(ngModel)] = "newGroup.channel">
+                                <p *ngIf = "newGroup.invalidChannel" class = "fs-6 fw-light text-danger mb-0 pb-0">* Channel already exists.</p>
                                 <ul class = "ps-4 mt-2">
-                                    <li>Channel 1</li>
-                                    <li>Channel 2</li>
-                                    <li>Channel 3</li>
+                                    <li *ngFor = "let channel of newGroup.channelList">{{ channel }}</li>
                                 </ul>
                             </div>
                             <div class = "col-1 p-0">
-                                <button type = "button" class = "btn btn-outline-primary">Add</button>
+                                <button type = "button" class = "btn btn-outline-primary" (click) = "newGroupAddChannel()">Add</button>
                             </div>
                         </div>
                         <div class = "row d-grid gap-2 col-4 mx-auto">
-                            <button type = "button" class = "btn btn-primary">Create</button>
+                            <button type = "button" class = "btn btn-primary" (click) = "createItem('newGroup')">Create</button>
                         </div>
                     </div>
                 </div>
@@ -221,28 +185,23 @@
             <div class = "accordion-item">
                 <h2 class = "accordion-header">
                     <button class = "accordion-button py-2" type = "button" data-bs-toggle = "collapse" data-bs-target = "#upgradeUser">
-                        Upgrade User
+                        Change Role
                     </button>
                 </h2>
-                <div id = "upgradeUser" class = "accordion-collapse collapse show" data-bs-parent = "#adminWork">
+                <div id = "upgradeUser" class = "accordion-collapse collapse" data-bs-parent = "#adminWork">
                     <div class = "accordion-body">
                         <div class = "row mb-3">
                             <label class = "col-2 col-lg-1 col-form-label me-2">Name</label>
                             <div class = "col">
-                                <input type = "text" class = "form-control" placeholder = "Username">
-                                <p *ngIf = "!groupValid" class = "fs-6 fw-light text-danger mb-0 pb-0">* User does not exist.</p>
+                                <input type = "text" class = "form-control" placeholder = "Username" [(ngModel)] = "chgRole.username">
+                                <p *ngIf = "!chgRole.validUser" class = "fs-6 fw-light text-danger mb-0 pb-0">* Invalid user.</p>
                             </div> 
-                        </div>
-                        <div class = "row mb-1 align-items-center">
-                            <label class = "col-2 col-lg-1 col-form-label me-2">Current Role</label>
-                            <div class = "col">
-                                <input type = "text" class = "form-control" placeholder = "Current Role" readonly = "true">
-                            </div>
                         </div>
                         <div class = "row mb-3 align-items-center">
                             <label class = "col-2 col-lg-1 col-form-label me-2">New Role</label>
                             <div class = "col">
-                                <select class = "form-select">
+                                <select class = "form-select" [(ngModel)] = "chgRole.role">
+                                    <option value = "User">User</option>
                                     <option value = "Group Assis">Group Assis</option>
                                     <option *ngIf = "fromParent.user.role == 'Super Admin';" value = "Group Admin">Group Admin</option>
                                     <option *ngIf = "fromParent.user.role == 'Super Admin';" value = "Super Admin">Super Admin</option>
@@ -250,7 +209,7 @@
                             </div> 
                         </div>
                         <div class = "row d-grid gap-2 col-4 mx-auto">
-                            <button type = "button" class = "btn btn-primary">Upgrade</button>
+                            <button type = "button" class = "btn btn-primary" (click) = "chgUserRole()">Save Change</button>
                         </div>
                     </div>
                 </div>
